assets/css/style.scss
/* ... */
#notfound.content>i {
	font-size: 80px;
	margin-bottom: 20px;
}

#notfound.content>span {
	font-weight: bold;
	padding: 0 15px;
	font-size: 20px;
}

@media only screen and (max-width: 1023px) {
	#notfound.content {
		padding-bottom: calc(var(--nav-buttons-h) + 20px);
	}
}

@media only screen and (max-width: 600px) {
	#notfound.content>i {
		font-size: 70px;
	}

	#notfound.content>span {
		font-size: 17px;
	}
}

/***************************** Blog Page Layout ****************************/

#blog {
	border: 1px solid var(--img-border);
    border-radius: 2em;
    overflow: hidden;
}

#blog .heading {
	padding: 60px 20px;
	background: linear-gradient(180deg, var(--blog-header-from), var(--blog-header-to));
}

#blog .heading h2 {
	margin-top: 0;
}

#blog .blog-card {
	outline: none;
	border-top: 1px solid var(--img-border);
	padding: 29px 20px 9px 20px;
}

#blog .blog-card .thumbnail {
	width: 100px;
	height: auto;
	aspect-ratio: 1/1;
	object-fit: cover;
	border-radius: 1em;
}

#blog .blog-card .text {
	margin: auto 0 auto 20px;
	min-width: 0;
}

#blog .blog-card p {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

#blog .blog-card span {
	display: -webkit-box;
	-webkit-line-clamp: 2;
	line-clamp: 2;
	overflow: hidden;
	-webkit-box-orient: vertical;
	margin-top: 10px;
}

#blog .blog-card .date {
	margin-top: 4px;
	font-size: 14px;
	font-style: italic;
	text-align: right;
}

@mixin blog_card-hover($hover_or_active) {

	#blog .blog-card:#{$hover_or_active} {
		border-radius: 0;
		box-shadow: 0 0 0 100vh var(--link-highlight) inset;
	}
}

@media (hover: hover) {
	@include blog_card-hover("hover");
}

@media (hover: none) {
	@include blog_card-hover("active");
}

@media only screen and (max-width: 600px) {
	#blog .heading {
		padding: 40px 20px;
	}

	#blog .blog-card .thumbnail {
		width: 85px;
		height: 85px;
	}
}

/********************************************************************************
********** REDUCED MOTION SPECIFIC CODE (need to be at the very end!) ***********
/********************************************************************************/
@media(prefers-reduced-motion: reduce) {

	* {
		scroll-behavior: auto;
	}

	*,
	.swal2-confirm.cclike-confirmbutton,
	.swal2-close.cclike-closebutton {
		@include no-anim;
	}
}

